fixed scroll bug on mobile

--- a/src/styles/SolarSystem.css
+++ b/src/styles/SolarSystem.css
@@ -90,6 +90,7 @@
 .sun {
   width: 100%;
   margin-top: 20%;
+  margin-bottom: -0.9%;
 }
 
 @media (min-width: 680px) {
